# payment-gateway-challenge

./: .env.example  .env.example.development  .gitignore  .lintstagedrc.json  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/public/: payment-gateway.postman_collection.json
frontend/src/: App.tsx  index.css
go-api/: .air.toml  .dockerignore  Dockerfile  Dockerfile.dev  README.md  go.mod  go.sum
go-api/cmd/: main.go
go-api/docs/: docs.go  swagger.json  swagger.yaml
go-api/migrations/: 0002_gen_random_uuid.sql  0003_idempotency_key.sql  0004_last_four_digits_of_card.sql  0005_card_id_of_transections_can_be_null.sql  0006_add_enum_to_transaction_status.sql  (+3 more)
redis/: Dockerfile  docker-entrypoint.sh  redis.conf
rust-processor/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
rust-processor/src/: application.rs  config.rs  db.rs  main.rs  models.rs  processor.rs  rabbitmq.rs
rust-processor/src/connections/: mod.rs  rabbitmq.rs  redis.rs
rust-processor/src/models/: account.rs  mod.rs  queue_model.rs  transaction.rs
rust-processor/src/processors/: mod.rs  processor_balance.rs  processor_transaction.rs
rust-processor/src/repository/: account_repository.rs  mod.rs  transaction_repository.rs
rust-processor/src/services/: deposit_service.rs  mod.rs  process_balance.rs  purchase_service.rs  refund_service.rs
scripts/: README.md  setup.sh
(+46 files in other folders)
