[package]
name = "rust-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures-lite = "2.6.1"
lapin = "3.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }